Add a ton of new stuff

--- a/holy-hell.html
+++ b/holy-hell.html
@@ -74,7 +74,7 @@
 											<p>Top-down</p>
 										</li>
 										<li>
-											<p>2D</p>
+											<p>3D</p>
 										</li>
 									</ul>
 								</footer>
@@ -95,11 +95,20 @@
 							<hr />
 							<section>
 								<h3>Trailer</h3>
-								<div class="video embed fit">
+								<div class="image">
 									<!--<video src="images/projects/holyhell/trailer.mp4" poster="images/projects/holyhell/banner.png"></video>-->
-									<iframe src="https://www.youtube-nocookie.com/embed/-r2_EzN8vMw?rel=0" width="560" height="315" frameborder="0">
-									</iframe>
+									<iframe src="https://www.youtube-nocookie.com/embed/-r2_EzN8vMw?showinfo=0&rel=0" allowfullscreen frameborder="0"></iframe>
 								</div>
+							</section>
+							<hr />
+							<section>
+								<h3>Spec Sheet</h3>
+								<a href="#" class="image fit"><img src="images/projects/holyhell/spec sheet.png" alt="" /></a>
+							</section>
+							<hr />
+							<section>
+								<h3>Artbook</h3>
+								<a href="#" class="image fit"><img src="images/projects/holyhell/artbook.png" alt="" /></a>
 							</section>
 							<hr />
 						</section>
@@ -112,7 +121,7 @@
 							<a href="#" class="image fit"><img src="images/projects/holyhell/banner.png" alt="" /></a>
 							<h3>About The Project</h3>
 							<p>Holy Hell was a 6 month project that I developed in Unity, along with
-								3 colleagues of mine, for my last last graduation year. Aside from improving skills that
+								3 colleagues of mine, for my last graduation year. Aside from improving skills that
 								I already had (e.g. programming),
 								it helped me develop skills in project management and marketing aswell.</p>
 							<h3>My Role In The Project</h3>
@@ -131,7 +140,7 @@
 								</li>
 								<li>2D Art
 									<p> I was also responsible for creating promo-art and official documents for the
-										game such as the Artbook.
+										game such as the Artbook or the Spec Sheet.
 									</p>
 								</li>
 								<li>Marketing
@@ -149,25 +158,97 @@
 									<a href="images/projects/holyhell/banner.png" class="image2 fit"><img
 											src="images/projects/holyhell/banner.png" alt="" /></a>
 								</article>
+								<article class="from-left">
+									<a href="images/projects/holyhell/banner 1.png" class="image2 fit"><img
+											src="images/projects/holyhell/banner 1.png" alt="" /></a>
+								</article>
 								<article class="from-right">
-									<a href="images/projects/holyhell/spotlight2.JPG" class="image2 fit"><img
-											src="images/projects/holyhell/spotlight2.JPG" alt="" /></a>
+									<a href="images/projects/holyhell/screenshot (0).JPG" class="image2 fit"><img
+											src="images/projects/holyhell/screenshot (0).JPG" alt="" /></a>
+								</article>
+								<article class="from-right">
+									<a href="images/projects/holyhell/screenshot (1).JPG" class="image2 fit"><img
+											src="images/projects/holyhell/screenshot (1).JPG" alt="" /></a>
 								</article>
 								<article class="from-left">
-									<a href="images/projects/holyhell/spotlight3.jpg" class="image2 fit"><img
-											src="images/projects/holyhell/spotlight3.JPG" alt="" /></a>
+									<a href="images/projects/holyhell/screenshot (2).JPG" class="image2 fit"><img
+											src="images/projects/holyhell/screenshot (2).JPG" alt="" /></a>
 								</article>
 								<article class="from-right">
-									<a href="images/projects/holyhell/spotlight2.JPG" class="image2 fit"><img
-											src="images/projects/holyhell/spotlight2.JPG" alt="" /></a>
+									<a href="images/projects/holyhell/screenshot (3).JPG" class="image2 fit"><img
+											src="images/projects/holyhell/screenshot (3).JPG" alt="" /></a>
 								</article>
 								<article class="from-left">
-									<a href="images/projects/holyhell/spotlight3.JPG" class="image2 fit"><img
-											src="images/projects/holyhell/spotlight3.JPG" alt="" /></a>
+									<a href="images/projects/holyhell/screenshot (4).JPG" class="image2 fit"><img
+											src="images/projects/holyhell/screenshot (4).JPG" alt="" /></a>
 								</article>
 								<article class="from-right">
-									<a href="images/projects/holyhell/spotlight2.JPG" class="image2 fit"><img
-											src="images/projects/holyhell/spotlight2.JPG" alt="" /></a>
+									<a href="images/projects/holyhell/screenshot (5).JPG" class="image2 fit"><img
+											src="images/projects/holyhell/screenshot (5).JPG" alt="" /></a>
+								</article>
+								<article class="from-right">
+									<a href="images/projects/holyhell/screenshot (6).JPG" class="image2 fit"><img
+											src="images/projects/holyhell/screenshot (6).JPG" alt="" /></a>
+								</article>
+								<article class="from-left">
+									<a href="images/projects/holyhell/screenshot (7).JPG" class="image2 fit"><img
+											src="images/projects/holyhell/screenshot (7).JPG" alt="" /></a>
+								</article>
+								<article class="from-right">
+									<a href="images/projects/holyhell/screenshot (8).JPG" class="image2 fit"><img
+											src="images/projects/holyhell/screenshot (8).JPG" alt="" /></a>
+								</article>
+								<article class="from-left">
+									<a href="images/projects/holyhell/screenshot (9).JPG" class="image2 fit"><img
+											src="images/projects/holyhell/screenshot (9).JPG" alt="" /></a>
+								</article>
+								<article class="from-right">
+									<a href="images/projects/holyhell/screenshot (10).JPG" class="image2 fit"><img
+											src="images/projects/holyhell/screenshot (10).JPG" alt="" /></a>
+								</article>
+								<article class="from-right">
+									<a href="images/projects/holyhell/screenshot (11).JPG" class="image2 fit"><img
+											src="images/projects/holyhell/screenshot (11).JPG" alt="" /></a>
+								</article>
+								<article class="from-left">
+									<a href="images/projects/holyhell/screenshot (12).JPG" class="image2 fit"><img
+											src="images/projects/holyhell/screenshot (12).JPG" alt="" /></a>
+								</article>
+								<article class="from-right">
+									<a href="images/projects/holyhell/screenshot (13).JPG" class="image2 fit"><img
+											src="images/projects/holyhell/screenshot (13).JPG" alt="" /></a>
+								</article>
+								<article class="from-left">
+									<a href="images/projects/holyhell/screenshot (14).JPG" class="image2 fit"><img
+											src="images/projects/holyhell/screenshot (14).JPG" alt="" /></a>
+								</article>
+								<article class="from-right">
+									<a href="images/projects/holyhell/screenshot (15).JPG" class="image2 fit"><img
+											src="images/projects/holyhell/screenshot (15).JPG" alt="" /></a>
+								</article>
+								<article class="from-right">
+									<a href="images/projects/holyhell/screenshot (16).JPG" class="image2 fit"><img
+											src="images/projects/holyhell/screenshot (16).JPG" alt="" /></a>
+								</article>
+								<article class="from-left">
+									<a href="images/projects/holyhell/screenshot (17).JPG" class="image2 fit"><img
+											src="images/projects/holyhell/screenshot (17).JPG" alt="" /></a>
+								</article>
+								<article class="from-right">
+									<a href="images/projects/holyhell/screenshot (18).JPG" class="image2 fit"><img
+											src="images/projects/holyhell/screenshot (18).JPG" alt="" /></a>
+								</article>
+								<article class="from-left">
+									<a href="images/projects/holyhell/screenshot (19).JPG" class="image2 fit"><img
+											src="images/projects/holyhell/screenshot (19).JPG" alt="" /></a>
+								</article>
+								<article class="from-right">
+									<a href="images/projects/holyhell/screenshot (20).JPG" class="image2 fit"><img
+											src="images/projects/holyhell/screenshot (20).JPG" alt="" /></a>
+								</article>
+								<article class="from-right">
+									<a href="images/projects/holyhell/screenshot (21).JPG" class="image2 fit"><img
+											src="images/projects/holyhell/screenshot (21).JPG" alt="" /></a>
 								</article>
 							</div>
 						</section>
