--- a/index.html
+++ b/index.html
@@ -18,35 +18,6 @@
 <body class="is-preload landing">
 	<div id="page-wrapper">
 
-		<!-- Header -->
-		<!--<header id="header">
-			<h1 id="logo"><a href="index.html">Landed</a></h1>
-			<nav id="nav">
-				<ul>
-					<li><a href="index.html">Home</a></li>
-					<li>
-						<a href="#">Layouts</a>
-						<ul>
-							<li><a href="left-sidebar.html">Left Sidebar</a></li>
-							<li><a href="right-sidebar.html">Right Sidebar</a></li>
-							<li><a href="no-sidebar.html">No Sidebar</a></li>
-							<li>
-								<a href="#">Submenu</a>
-								<ul>
-									<li><a href="#">Option 1</a></li>
-									<li><a href="#">Option 2</a></li>
-									<li><a href="#">Option 3</a></li>
-									<li><a href="#">Option 4</a></li>
-								</ul>
-							</li>
-						</ul>
-					</li>
-					<li><a href="elements.html">Elements</a></li>
-					<li><a href="#" class="button primary">Sign Up</a></li>
-				</ul>
-			</nav>
-		</header>-->
-
 		<!-- Banner -->
 		<section id="banner">
 			<div class="content">
@@ -84,28 +55,36 @@
 						<div class="col-4 col-12-medium">
 							<header>
 								<h2>Who am I?</h2>
-								<p>Long story short, I'm a man passionate about game development
+								<p>Long story short, I'm a person passionate about game development
 									and the entertainment industry. </p>
 							</header>
 						</div>
 						<div class="col-4 col-12-medium">
 							<p>I am a 20 year-old man from Lisbon, Portugal who has been passionate about
-								the entertainment industry for as long as I can remember. With only an internship
-								left to complete, I am close to having a Graduate Degree in Game
-								Development.</p>
+								the entertainment industry for as long as I can remember. So I
+								started my graduation 3 years ago and now I'm only an internship away from having a
+								Graduate Degree in Game Development.</p>
 						</div>
 						<div class="col-4 col-12-medium">
-							<p>I accomplished great results throughout my graduation, having earned many respected
-								prizes from my University ULHT and some other entities which you can read in more
-								detail in my <a href="#">Curriculum Vitae</a> (editar isto depois com os prémios
-								corretos e menções).
+							<p>In college, I formed a group called <a href="https://redoak-studios.itch.io/" 
+								target="_blank">Redoak Studios</a> with 3 colleagues, which was responsible for the 
+								development of many games. We accomplished great results, earning many respected
+								awards from my University and other organizations which you can check in my 
+								<a href="#"target="_blank">Curriculum Vitae</a>.
 							</p>
 						</div>
 					</div>
+					<p>Thanks to many past projects, I have developed great skills working as a team and
+						individually, not only for bigger projects but also smaller ones such as game jams - having
+						participated on several throughout my journey as a game developer.
+						<br><br>Aside from the game dev world, I am also an energetic individual who practices combat
+						sports.
+						I'm a Kickboxing and Muay Thai athlete and I've even won a Kickboxing National Champion title.
+					</p>
 				</div>
 			</div>
-			<a href="#two" class="goto-next scrolly">Next</a>
 		</section>
+
 		<!-- Two -->
 		<section id="two" class="wrapper style1 special fade-up">
 			<div class="container">
@@ -140,71 +119,86 @@
 								and have basic knowledge in vector-based programs such as Illustrator.
 							</p>
 						</section>
-						<!--
-						<section class="col-4 col-6-medium col-12-xsmall">
-							<span class="icon solid alt major fa-paper-plane"></span>
-							<h3>Non semper interdum</h3>
-							<p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
-						</section>
-						<section class="col-4 col-6-medium col-12-xsmall">
-							<span class="icon solid alt major fa-file"></span>
-							<h3>Odio laoreet accumsan</h3>
-							<p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
-						</section>
-						<section class="col-4 col-6-medium col-12-xsmall">
-							<span class="icon solid alt major fa-lock"></span>
-							<h3>Massa arcu accumsan</h3>
-							<p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
-						</section>
-					-->
 					</div>
 				</div>
-				<footer class="major">
-					<ul class="actions special">
-						<li><a href="#three" class="button scrolly">See my projects</a></li>
-					</ul>
-
-				</footer>
 			</div>
 		</section>
-		<!-- Five -->
-		<header class="major">
-			<h2>Projects</h2>
-		</header>
-		<section class="wrapper2 style1 align-center">
-			<!-- Gallery -->
-			<div class="gallery style1 medium onscroll-fade-in">
-				<article>
-					<a href="holy-hell.html" class="image2"><img src="images/projects/holyhell/spotlight3.JPG" alt="" /></a>
-					<div class="caption">
-						<h3>Holy Hell</h3>
-						<p class="subtitle">Programmer | Game Designer | 2D Artist | Marketing Manager</p>
-					</div>
-				</article>
-				<article>
-					<a href="holy-hell.html" class="image2"><img src="images/projects/bernardino/spotlight.png" alt="" /></a>
-					<div class="caption">
-						<h3>Bernardino</h3>
-						<p class="subtitle">Programmer | Game Designer | 2D Artist | Marketing Manager</p>
-					</div>
-				</article>
-				<article>
-					<a href="holy-hell.html" class="image2"><img src="images/projects/illuminants/spotlight4.png" alt="" /></a>
-					<div class="caption">
-						<h3>Illuminants</h3>
-						<p class="subtitle">Programmer | Game Designer | 2D Artist | Marketing Manager</p>
-					</div>
-				</article>
-				<article>
-					<a href="holy-hell.html" class="image2"><img src="images/projects/illuminants/spotlight.PNG" alt="" /></a>
-					<div class="caption">
-						<h3>Illuminants</h3>
-						<p class="subtitle">Programmer | Game Designer | 2D Artist | Marketing Manager</p>
-					</div>
-				</article>
-			</div>
+		<!-- Three -->
+		<section id="three" class="wrapper style1 align-center special fade-up">
+			<div class="container2">
+				<header class="major">
+					<h2>My Projects</h2>
+				</header>
+				<!-- Gallery -->
+				<div class="gallery style1 medium onscroll-fade-in">
+					<article>
+						<a href="holy-hell.html" class="image2"><img src="images/projects/holyhell/spotlight.JPG"
+								alt="" /></a>
+						<div class="caption">
+							<h3>Holy Hell</h3>
+							<p class="subtitle">Programmer | Game Designer | 2D Artist | Marketing Manager</p>
+						</div>
+					</article>
+					<article>
+						<a href="holy-hell.html" class="image2"><img src="images/projects/bernardino/spotlight.png"
+								alt="" /></a>
+						<div class="caption">
+							<h3>Bernardino</h3>
+							<p class="subtitle">Programmer | Game Designer | 3D Artist</p>
+						</div>
+					</article>
+					<article>
+						<a href="holy-hell.html" class="image2"><img src="images/projects/illuminants/spotlight2.png"
+								alt="" /></a>
+						<div class="caption">
+							<h3>Illuminants</h3>
+							<p class="subtitle">Programmer | Game Designer | 2D Artist</p>
+						</div>
+					</article>
+					<article>
+						<a href="holy-hell.html" class="image2"><img src="images/projects/zooquest/spotlight.png"
+								alt="" /></a>
+						<div class="caption">
+							<h3>Zoo Quest</h3>
+							<p class="subtitle">Programmer | Game Designer | 3D Artist | 2D Artist</p>
+						</div>
+					</article>
+					<article>
+						<a href="holy-hell.html" class="image2"><img src="images/projects/illuminants/spotlight.PNG"
+								alt="" /></a>
+						<div class="caption">
+							<h3>Heróis do Mar</h3>
+							<p class="subtitle">Game Designer</p>
+						</div>
+					</article>
+					<article>
+						<a href="holy-hell.html" class="image2"><img src="images/projects/holyhell/spotlight.JPG"
+								alt="" /></a>
+						<div class="caption">
+							<h3>ATMU</h3>
+							<p class="subtitle">Programmer | Game Designer</p>
+						</div>
+					</article>
+					<article>
+						<a href="holy-hell.html" class="image2"><img src="images/projects/bernardino/spotlight.png"
+								alt="" /></a>
+						<div class="caption">
+							<h3>Bernardino</h3>
+							<p class="subtitle">Programmer | Game Designer | 2D Artist | Marketing Manager</p>
+						</div>
+					</article>
 
+
+				</div>
+			</div>
+			<footer class="major">
+				<ul class="actions special">
+					<li><a href="#thanks-note" class="button scrolly">All Projects</a></li>
+				</ul>
+
+			</footer>
 		</section>
+
 
 
 
