Fix holy hell page

--- a/holy-hell.html
+++ b/holy-hell.html
@@ -123,7 +123,8 @@
 							<p>Holy Hell was a 6 month project that I developed in Unity, along with
 								3 colleagues of mine, for my last graduation year. Aside from improving skills that
 								I already had (e.g. programming),
-								it helped me develop skills in project management and marketing aswell.</p>
+								it helped me develop skills in project management and marketing aswell.
+							<br><br> For now, it will remain a vertical slide. </p>
 							<h3>My Role In The Project</h3>
 							<ul class="roles">
 								<li>Programming
