--- a/holy-hell.html
+++ b/holy-hell.html
@@ -54,7 +54,7 @@
 			<div class="container">
 				<header class="major">
 					<h2>Holy Hell</h2>
-					<p>A chaotic and bloody vengeance that ends with God's death</p>
+					<p>A chaotic and bloody vengeance that ends in God's death</p>
 				</header>
 				<div class="row gtr-150">
 					<div class="col-4 col-12-medium">
@@ -78,6 +78,7 @@
 										</li>
 									</ul>
 								</footer>
+								<hr />
 								<h3>Synopsis</h3>
 								<p>Holy Hell is an action-adventure game set in Heaven, where you are searching for God
 									so you
@@ -85,30 +86,34 @@
 									himself as
 									you venture through all corners of Heaven.
 								</p>
-								<footer>
+								<!-- ITCH.IO PAGE -->
+								<!--<footer>
 									<ul class="actions">
 										<li><a href="#" class="button">Itch.io (Download Link)</a></li>
 									</ul>
-								</footer>
-
+								</footer>-->
 							</section>
 							<hr />
+
+							<!-- Trailer -->
 							<section>
 								<h3>Trailer</h3>
-								<div class="image">
+								<div class="video embed fit">
 									<!--<video src="images/projects/holyhell/trailer.mp4" poster="images/projects/holyhell/banner.png"></video>-->
 									<iframe src="https://www.youtube-nocookie.com/embed/-r2_EzN8vMw?showinfo=0&rel=0" allowfullscreen frameborder="0"></iframe>
 								</div>
 							</section>
 							<hr />
+							<!-- Spec Sheet -->
 							<section>
 								<h3>Spec Sheet</h3>
-								<a href="#" class="image fit"><img src="images/projects/holyhell/spec sheet.png" alt="" /></a>
+								<a href="https://drive.google.com/file/d/1W_QOXMSozPkX2T0er_ZO8uiWUJ9qYjCt/view?usp=sharing" target="_blank" class="image fit"><img src="images/projects/holyhell/spec sheet.png" alt="" /></a>
 							</section>
 							<hr />
+							<!-- Artbook -->
 							<section>
 								<h3>Artbook</h3>
-								<a href="#" class="image fit"><img src="images/projects/holyhell/artbook.png" alt="" /></a>
+								<a href="https://drive.google.com/file/d/1DxEk58nolbF11e1v6KHLwBjIpuXDdTIS/view?usp=sharing" target="_blank" class="image fit"><img src="images/projects/holyhell/artbook.png" alt="" /></a>
 							</section>
 							<hr />
 						</section>
