Add Bernardino page

--- a/holy-hell.html
+++ b/holy-hell.html
@@ -64,18 +64,10 @@
 							<section>
 								<footer>
 									<ul class="game-info">
-										<li>
-											<p>Singleplayer</p>
-										</li>
-										<li>
-											<p>Action-adventure</p>
-										</li>
-										<li>
-											<p>Top-down</p>
-										</li>
-										<li>
-											<p>3D</p>
-										</li>
+										<li><p>Singleplayer</p></li>
+										<li><p>Action-adventure</p></li>
+										<li><p>Top-down</p></li>
+										<li><p>3D</p></li>
 									</ul>
 								</footer>
 								<hr />
@@ -255,6 +247,14 @@
 								<article class="from-right">
 									<a href="images/projects/holyhell/screenshot (21).JPG" class="image2 fit"><img
 											src="images/projects/holyhell/screenshot (21).JPG" alt="" /></a>
+								</article>
+								<article class="from-right">
+									<a href="images/projects/holyhell/screenshot (22).png" class="image2 fit"><img
+											src="images/projects/holyhell/screenshot (22).png" alt="" /></a>
+								</article>
+								<article class="from-right">
+									<a href="images/projects/holyhell/enemies.png" class="image2 fit"><img
+											src="images/projects/holyhell/enemies.png" alt="" /></a>
 								</article>
 							</div>
 						</section>
