--- a/index.html
+++ b/index.html
@@ -140,11 +140,11 @@
 						</div>
 					</article>
 					<article>
-						<a href="holy-hell.html" class="image2"><img src="images/projects/bernardino/spotlight.png"
+						<a href="bernardino.html" class="image2"><img src="images/projects/bernardino/spotlight.png"
 								alt="" /></a>
 						<div class="caption">
 							<h3>Bernardino</h3>
-							<p class="subtitle">Programmer | Game Designer | 3D Artist</p>
+							<p class="subtitle">Programmer | Game Designer | 2D & 3D Artist</p>
 						</div>
 					</article>
 					<article>
