--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 						</div>
 					</article>
 					<article>
-						<a href="holy-hell.html" class="image2"><img src="images/projects/illuminants/spotlight2.png"
+						<a href="illuminants.html" class="image2"><img src="images/projects/illuminants/spotlight2.png"
 								alt="" /></a>
 						<div class="caption">
 							<h3>Illuminants</h3>
