Finish illuminants page; Update main page; Improve general pages and css.

--- a/bernardino.html
+++ b/bernardino.html
@@ -92,7 +92,7 @@
 								<!-- ITCH.IO PAGE -->
 								<footer>
 									<ul class="actions">
-										<li><a href="https://redoak-studios.itch.io/bernardino" target="_blank" class="button">Itch.io (Download Link)</a></li>
+										<li><a href="https://redoak-studios.itch.io/bernardino" target="_blank" class="button">Download Link</a></li>
 									</ul>
 								</footer>
 							</section>
@@ -120,7 +120,7 @@
 
 						<!-- Content -->
 						<section id="content">
-							<a href="#" class="image fit"><img src="images/projects/bernardino/banner.png" alt="" /></a>
+							<span class="image fit"><img src="images/projects/bernardino/banner.png" alt="" /></span>
 							<h3>About The Project</h3>
 							<p>Bernardino was a Unity project developed in 3 months by me and my group for the last
 								semester of the second year. Since we we're working on two big projects for that
@@ -130,7 +130,7 @@
 								<br><br>
 								Bernardino was an incredibly challenging project, as I had to implemend a lot of physics behaviours. I also took my first steps in procedural animation for this project and improved my AI skills by tackling the bosses.
 								<br><br> 
-								For now, the project will remain a vertical slide. </p>
+								For now, the project will remain a vertical slice. </p>
 							<h3>My Role In The Project</h3>
 							<ul class="roles">
 								<li>Programming
