--- a/holy-hell.html
+++ b/holy-hell.html
@@ -81,7 +81,7 @@
 								<!-- ITCH.IO PAGE -->
 								<!--<footer>
 									<ul class="actions">
-										<li><a href="#" class="button">Itch.io (Download Link)</a></li>
+										<li><a href="#" target="_blank" class="button">Download Link</a></li>
 									</ul>
 								</footer>-->
 							</section>
@@ -92,7 +92,7 @@
 								<h3>Trailer</h3>
 								<div class="video embed fit">
 									<!--<video src="images/projects/holyhell/trailer.mp4" poster="images/projects/holyhell/banner.png"></video>-->
-									<iframe src="https://www.youtube-nocookie.com/embed/-r2_EzN8vMw?showinfo=0&rel=0" allowfullscreen frameborder="0"></iframe>
+									<iframe src="https://www.youtube-nocookie.com/embed/CAZge36NEHo?rel=0" allowfullscreen frameborder="0"></iframe>
 								</div>
 							</section>
 							<hr />
@@ -115,13 +115,13 @@
 
 						<!-- Content -->
 						<section id="content">
-							<a href="#" class="image fit"><img src="images/projects/holyhell/banner.png" alt="" /></a>
+							<span class="image fit"><img src="images/projects/holyhell/banner.png" alt="" /></span>
 							<h3>About The Project</h3>
 							<p>Holy Hell was a 6 month project that I developed in Unity, along with
 								3 colleagues of mine, for my last graduation year. Aside from improving skills that
 								I already had (e.g. programming),
 								it helped me develop skills in project management and marketing aswell.
-							<br><br> For now, it will remain a vertical slide. </p>
+							<br><br> For now, it will remain a vertical slice. </p>
 							<h3>My Role In The Project</h3>
 							<ul class="roles">
 								<li>Programming
@@ -138,7 +138,7 @@
 								</li>
 								<li>2D Art
 									<p> I was also responsible for creating promo-art and official documents for the
-										game such as the Artbook or the Spec Sheet.
+										game such as the Artbook and the Spec Sheet.
 									</p>
 								</li>
 								<li>Marketing
