--- a/illuminants.html
+++ b/illuminants.html
@@ -54,7 +54,7 @@
 			<div class="container">
 				<header class="major">
 					<h2>Illuminants</h2>
-					<p>A simplistic yet very challenging puzzle game</p>
+					<p>Simplistic, relaxing yet very challenging puzzle game</p>
 				</header>
 				<div class="row gtr-150">
 					<div class="col-4 col-12-medium">
@@ -81,17 +81,15 @@
 								<hr />
 								<h3>Synopsis</h3>
 								<p>Illuminants is a puzzle-solving game in which the player controls three characters
-									simultaneously and has to get them to their respective portal.
-									Those three cute little characters called Illuminants are beings made of light,
-									which is important to know in order to complete some levels! Put yourself to the
-									test with all of the challenging and mind-bugging puzzles the game has to offer!
+									simultaneously and has to get each of them to their respective destinations.
+									Put yourself to the test with all of the challenging and mind-bugging puzzles the game has to offer!
 								</p>
 								<!-- ITCH.IO PAGE -->
-								<!--<footer>
+								<footer>
 									<ul class="actions">
-										<li><a href="#" class="button">Itch.io (Download Link)</a></li>
+										<li><a href="https://redoak-studios.itch.io/illuminants" target="_blank" class="button">Download Link</a></li>
 									</ul>
-								</footer>-->
+								</footer>
 							</section>
 							<hr />
 
@@ -123,12 +121,13 @@
 							<a href="#" class="image fit"><img src="images/projects/illuminants/banner.png"
 									alt="" /></a>
 							<h3>About The Project</h3>
-							<p>Illuminants was the first game I ever developed in Unity. We worked on it for 4 months along with ATMU.
-								<br><br> For now, it will remain a vertical slide. </p>
+							<p>Illuminants was the first game I ever developed in Unity. My group and I worked on it for 3 months alongside with ATMU (another project of ours) and we got lots of praise from colleagues and professors just by the idea itself. We were prized the Best Videogame award by our University, competing against projects from all of our course's years. Ending my first year of game development in such a positive way made me feel extremely motivated, even more passionate about this industry and very eager for the future.
+								<br><br>We've exposed the game in multiple events in Portugal and it was really well embraced by the community.
+								<br><br>Currently, we are re-developing Illuminants from scratch and intend to release it to mobile, with no determined schedule. </p>
 							<h3>My Role In The Project</h3>
 							<ul class="roles">
 								<li>Programming
-									<p> I was Holy Hell's lead programmer, focusing mostly on gameplay.</p>
+									<p> I was Illuminants lead programmer.</p>
 								</li>
 
 								<li>Game Design
@@ -136,19 +135,11 @@
 										colleagues.</p>
 								</li>
 								<li>UI Design
-									<p> With the use of Photoshop, I created Holy Hell's UI components, later tweaking
-										and adding visual effects in Unity.</p>
+									<p> I was responsible for implementing the 3D interactive menus and creating the gameplay UI.</p>
 								</li>
 								<li>2D Art
 									<p> I was also responsible for creating promo-art and official documents for the
-										game such as the Artbook or the Spec Sheet.
-									</p>
-								</li>
-								<li>Marketing
-									<p> Besides the creation of posters, banners and other promotional art, I was the
-										project's marketing manager
-										in charge of many social networks (Instagram, Twitter, IndieDB, etc) and all
-										communications with the press.
+										game such as the Artbook and the Spec Sheet.
 									</p>
 								</li>
 							</ul>
