--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 		<!-- Banner -->
 		<section id="banner">
 			<div class="content">
-				<span class="image"><img src="images/me/me.jpg" alt="" /></span>
+				<span class="image overlayed"><img src="images/me/me.jpg" alt="" /></span>
 				<header>
 					<h2>Diogo Martins</h2>
 					<p>Game Developer<br>Programmer<br>2D Artist</p>
@@ -48,7 +48,7 @@
 
 		<!-- One -->
 		<section id="one" class="spotlight style1 bottom">
-			<span class="image fit main"><img src="images/me/me3.jpg" alt="" /></span>
+			<span class="image overlayed main"><img src="images/me/me5_streched.JPG" alt="" /></span>
 			<div class="content">
 				<div class="container">
 					<div class="row">
@@ -61,7 +61,7 @@
 						</div>
 						<div class="col-4 col-12-medium">
 							<p>I am a 20 year-old man from Lisbon, Portugal who has been passionate about
-								the entertainment industry for as long as I can remember. So I
+								the entertainment industry for as long as I can remember. I
 								started my graduation 3 years ago and now I'm only an internship away from having a
 								Graduate Degree in Game Development.</p>
 						</div>
@@ -74,6 +74,7 @@
 							</p>
 						</div>
 					</div>
+					<hr class="minor colorized"/>
 					<p>Thanks to many past projects, I have developed great skills working as a team and
 						individually, not only for bigger projects but also smaller ones such as game jams - having
 						participated on several throughout my journey as a game developer.
@@ -107,8 +108,7 @@
 							<h3>Game Design</h3>
 							<p>One of my most consistant roles in game development has been game design, which I
 								had in all of my previous projects. Other extensions of this area such as World and
-								Level
-								Design and have also been a part of my work.
+								Level Design have also been a part of my work.
 							</p>
 						</section>
 						<section class="col-4 col-6-medium col-12-xsmall">
@@ -144,11 +144,11 @@
 								alt="" /></a>
 						<div class="caption">
 							<h3>Bernardino</h3>
-							<p class="subtitle">Programmer | Game Designer | 2D & 3D Artist</p>
+							<p class="subtitle">Programmer | Game Designer | 2D Artist | 3D Artist</p>
 						</div>
 					</article>
 					<article>
-						<a href="illuminants.html" class="image2"><img src="images/projects/illuminants/spotlight2.png"
+						<a href="illuminants.html" class="image2"><img src="images/projects/illuminants/wallpaper 1.png"
 								alt="" /></a>
 						<div class="caption">
 							<h3>Illuminants</h3>
@@ -160,7 +160,7 @@
 								alt="" /></a>
 						<div class="caption">
 							<h3>Zoo Quest</h3>
-							<p class="subtitle">Programmer | Game Designer | 3D Artist | 2D Artist</p>
+							<p class="subtitle">Programmer | Game Designer | 2D Artist | 3D Artist</p>
 						</div>
 					</article>
 					<article>
@@ -172,7 +172,7 @@
 						</div>
 					</article>
 					<article>
-						<a href="holy-hell.html" class="image2"><img src="images/projects/holyhell/spotlight.JPG"
+						<a href="holy-hell.html" class="image2"><img src="images/projects/holyhell/banner.png"
 								alt="" /></a>
 						<div class="caption">
 							<h3>ATMU</h3>
@@ -180,21 +180,18 @@
 						</div>
 					</article>
 					<article>
-						<a href="holy-hell.html" class="image2"><img src="images/projects/bernardino/spotlight.png"
+						<a href="holy-hell.html" class="image2"><img src="images/projects/holyhell/spotlight.JPG"
 								alt="" /></a>
 						<div class="caption">
-							<h3>Bernardino</h3>
-							<p class="subtitle">Programmer | Game Designer | 2D Artist | Marketing Manager</p>
+							<h3>ATMU</h3>
+							<p class="subtitle">Programmer | Game Designer</p>
 						</div>
 					</article>
-
-
+					
 				</div>
 			</div>
 			<footer class="major">
-				<ul class="actions special">
-					<li><a href="#thanks-note" class="button scrolly">All Projects</a></li>
-				</ul>
+				<a href="https://diotins.itch.io/" target="_blank" class="button">All Projects</a>
 
 			</footer>
 		</section>
