Add cv links; Improve some things in main page.

--- a/holy-hell.html
+++ b/holy-hell.html
@@ -92,7 +92,7 @@
 								<h3>Trailer</h3>
 								<div class="video embed fit">
 									<!--<video src="images/projects/holyhell/trailer.mp4" poster="images/projects/holyhell/banner.png"></video>-->
-									<iframe src="https://www.youtube-nocookie.com/embed/CAZge36NEHo?rel=0" allowfullscreen frameborder="0"></iframe>
+									<iframe src="https://www.youtube-nocookie.com/embed/CAZge36NEHo?rel=0" width="560" height="315" allowfullscreen frameborder="0"></iframe>
 								</div>
 							</section>
 							<hr />
