--- a/index.html
+++ b/index.html
@@ -26,18 +26,18 @@
 					<h2>Diogo Martins</h2>
 					<p>Game Developer<br>Programmer<br>2D Artist</p>
 					<ul class="icons">
-						<li><a href="#" target="_blank" class="icon brands alt fa-twitter"><span
+						<li><a href="https://twitter.com/diotins" target="_blank" class="icon brands alt fa-twitter"><span
 									class="label">Twitter</span></a></li>
-						<li><a href="#" target="_blank" class="icon brands alt fa-instagram"><span
+						<li><a href="https://www.instagram.com/diogo_martins99" target="_blank" class="icon brands alt fa-instagram"><span
 									class="label">Instagram</span></a></li>
-						<li><a href="#" target="_blank" class="icon brands alt fa-facebook-f"><span
+						<li><a href="https://www.facebook.com/diogo.fmartins99" target="_blank" class="icon brands alt fa-facebook-f"><span
 									class="label">Facebook</span></a>
-						<li><a href="#" target="_blank" class="icon brands alt fa-linkedin-in"><span
+						<li><a href="https://www.linkedin.com/in/diogo-martins99/" target="_blank" class="icon brands alt fa-linkedin-in"><span
 									class="label">LinkedIn</span></a>
 							<!--<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>-->
-						<li><a href="" target="_blank" class="icon brands alt fa-gitlab"><span
+						<li><a href="https://gitlab.com/diogo_martins99" target="_blank" class="icon brands alt fa-gitlab"><span
 									class="label">GitLab</span></a></li>
-						<li><a href="#" target="_blank" class="icon solid alt fa-envelope"><span
+						<li><a href="mailto:diogofm99@gmail.com" target="_blank" class="icon solid alt fa-envelope"><span
 									class="label">Email</span></a></li>
 					</ul>
 				</header>
@@ -70,7 +70,8 @@
 								target="_blank">Redoak Studios</a> with 3 colleagues, which was responsible for the 
 								development of many games. We accomplished great results, earning many respected
 								awards from my University and other organizations which you can check in my 
-								<a href="#"target="_blank">Curriculum Vitae</a>.
+								<a href="https://drive.google.com/file/d/1CCJ91yBLLysY2RDGXceBKXb9ZUuvgi-0/view?usp=sharing"
+								target="_blank">Curriculum Vitae</a>.
 							</p>
 						</div>
 					</div>
@@ -298,7 +299,8 @@
 				<header>
 					<h2>Thank you for your time!</h2>
 					<p>You can find more detailed information about me and my work in my
-						<a class="dark" href="#">Curriculum Vitae</a>
+						<a class="dark" href="https://drive.google.com/file/d/1CCJ91yBLLysY2RDGXceBKXb9ZUuvgi-0/view?usp=sharing"
+						target="_blank">Curriculum Vitae</a>
 						<br>I hope to hear from you in the future :) </p>
 				</header>
 			</div>
