Add ATMU and Zoo Quest pages

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 						</div>
 					</article>
 					<article>
-						<a href="bernardino.html" class="image2"><img src="images/projects/bernardino/spotlight.png"
+						<a href="bernardino.html" class="image2"><img src="images/projects/bernardino/banner_square.png"
 								alt="" /></a>
 						<div class="caption">
 							<h3>Bernardino</h3>
@@ -157,7 +157,7 @@
 						</div>
 					</article>
 					<article>
-						<a href="holy-hell.html" class="image2"><img src="images/projects/zooquest/spotlight.png"
+						<a href="zoo-quest.html" class="image2"><img src="images/projects/zooquest/spotlight2.jpeg"
 								alt="" /></a>
 						<div class="caption">
 							<h3>Zoo Quest</h3>
@@ -173,7 +173,7 @@
 						</div>
 					</article>
 					<article>
-						<a href="holy-hell.html" class="image2"><img src="images/projects/holyhell/banner.png"
+						<a href="atmu.html" class="image2"><img src="images/projects/atmu/banner.png"
 								alt="" /></a>
 						<div class="caption">
 							<h3>ATMU</h3>
