--- a/zoo-quest.html
+++ b/zoo-quest.html
@@ -7,7 +7,7 @@
 <html>
 
 <head>
-	<title>Diogo Martins - ATMU</title>
+	<title>Diogo Martins - Zoo Quest</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 	<link rel="stylesheet" href="assets/css/main.css" />
@@ -53,8 +53,8 @@
 		<div id="main" class="wrapper style1">
 			<div class="container">
 				<header class="major">
-					<h2>ATMU</h2>
-					<p>Find your way back home in this post-apocalyptic world</p>
+					<h2>Zoo Quest</h2>
+					<p>Never have rhyming riddles been more fun</p>
 				</header>
 				<div class="row gtr-150">
 					<div class="col-4 col-12-medium">
@@ -68,27 +68,43 @@
 											<p>Singleplayer</p>
 										</li>
 										<li>
-											<p>Puzzle-solving</p>
+											<p>Riddle/Puzzle</p>
 										</li>
 										<li>
-											<p>Sidescroller</p>
+											<p>Walking Simulator</p>
 										</li>
 										<li>
-											<p>2D</p>
+											<p>1st Person</p>
+										</li>
+										<li>
+											<p>3D</p>
 										</li>
 									</ul>
 								</footer>
 								<hr />
 								<h3>Synopsis</h3>
-								<p>ATMU is a 2D side-scroller game, where an abandoned robot tries to find his way home 
-									by overcoming obstacles and solving puzzles on a deserted planet.
+								<p>Monkeys have escaped from their cage, and has a Zoo Keeper, it is your duty to find
+									them and bring them back to where they're safe!
+									Explore the zoo and talk to its animals, they will give you clues in exchange for
+									favors!
+									The game consists mostly of rhyming riddles so put your riddle-solving skills to the
+									test and find all the lost monkeys!
 								</p>
 								<!-- ITCH.IO PAGE -->
 								<footer>
 									<ul class="actions">
-										<li><a href="https://videojogoslusofona.itch.io/atmu" target="_blank" class="button">Download Link</a></li>
+										<li><a href="https://redoak-studios.itch.io/zoo-quest" target="_blank"
+												class="button">Download Link</a></li>
 									</ul>
 								</footer>
+							</section>
+							<hr />
+							<!-- Spec Sheet -->
+							<section>
+								<h3>Spec Sheet</h3>
+								<a href="https://drive.google.com/file/d/1QlopuHG0K_5S5J9KYNzXtNZMcGoEL1sx/view?usp=sharing"
+									target="_blank" class="image fit"><img src="images/projects/zooquest/spec sheet.png"
+										alt="" /></a>
 							</section>
 							<hr />
 						</section>
@@ -98,42 +114,61 @@
 
 						<!-- Content -->
 						<section id="content">
-							<span class="image fit"><img src="images/projects/atmu/banner.png" alt="" /></span>
+							<span class="image fit"><img src="images/projects/zooquest/spotlight.png" alt="" /></span>
 							<h3>About The Project</h3>
-							<p>ATMU was developed in 3 months alongside Illuminants. It was a 1st year project and
-								the one that most developed my programming skills in that year. The game design and level design were 
-								also incredibly challenging specially given the experience my team and I had, but I'm proud to say
-								that it worked out great and I gained a great amount of experience from it.
+							<p>Zoo Quest was a Unity project developed in about 5 months for the first
+								semester of the second year. That semester, we were assigned to create a Walking
+								Simulator
+								game, which was something we had never done before. So the main challenge was to make a
+								walking sim with basically no mechanical challenge but still fun and really enjoyable to
+								play.
+								Rhyming riddles came to mind and I believe it was a perfect choice to base the gameplay
+								around them.
 								<br><br>
-								The game as been showcased in many events and has won an Honorable Mention award given by my university.
+								In this stage of my course, I started to learn about hierarchy, interfaces and design
+								patterns,
+								which I applied when programming Zoo Quest.
 							<h3>My Role In The Project</h3>
 							<ul class="roles">
 								<li>Programming
-									<p> I was one of ATMU's programmers.</p>
+									<p> I was Zoo Quest's solo programmer.</p>
 								</li>
 
 								<li>Game Design
-									<p> I've worked on both game design and level design side-by-side with my team.</p>
+									<p> I've worked on game design and world design side-by-side with my team.</p>
+								</li>
+								<li>2D Art
+									<p> I designed the game's UI elements and I was also responsible for creating the
+										official documents and web/2D content.
+									</p>
+								</li>
+								<li>3D Art
+									<p> I was responsible for many different models but I wasn't the main 3D artist.
+									</p>
 								</li>
 							</ul>
 							<!-- Gallery  -->
 							<h3>Gallery</h3>
 							<div class="gallery2">
 								<article class="from-left">
-									<a href="images/projects/atmu/banner.png" class="image2 fit"><img
-											src="images/projects/atmu/banner.png" alt="" /></a>
+									<a href="images/projects/zooquest/5.jpeg" class="image2 fit"><img
+											src="images/projects/zooquest/5.jpeg" alt="" /></a>
 								</article>
 								<article class="from-left">
-									<a href="images/projects/atmu/ss1.png" class="image2 fit"><img
-											src="images/projects/atmu/ss1.png" alt="" /></a>
+									<a href="images/projects/zooquest/1.png" class="image2 fit"><img
+											src="images/projects/zooquest/1.png" alt="" /></a>
 								</article>
 								<article class="from-left">
-									<a href="images/projects/atmu/ss2.png" class="image2 fit"><img
-											src="images/projects/atmu/ss2.png" alt="" /></a>
+									<a href="images/projects/zooquest/2.png" class="image2 fit"><img
+											src="images/projects/zooquest/2.png" alt="" /></a>
 								</article>
 								<article class="from-left">
-									<a href="images/projects/atmu/ss3.png" class="image2 fit"><img
-											src="images/projects/atmu/ss3.png" alt="" /></a>
+									<a href="images/projects/zooquest/3.jpeg" class="image2 fit"><img
+											src="images/projects/zooquest/3.jpeg" alt="" /></a>
+								</article>
+								<article class="from-left">
+									<a href="images/projects/zooquest/4.jpeg" class="image2 fit"><img
+											src="images/projects/zooquest/4.jpeg" alt="" /></a>
 								</article>
 							</div>
 						</section>
